--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=WechatTool4J
 server.port=80
 
-logging.level.root=debug
+logging.level.root=info
+logging.level.xx.wechat.tools=debug
